--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.6",
     "body-parser": "^1.19.0",
+    "dom-parser": "^0.1.6",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "postcss": "^7.0.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
