--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
     "dom-parser": "^0.1.6",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
+    "node-sass": "^4.14.1",
     "postcss": "^7.0.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
